# typing

./: .gitignore  Makefile  README  README.md  analyses.cabal  input.php  mate.tmproj  parse  project.tmproj  run
src/: Debugger.hs  Inferencer.hs  Main.hs  Printer.hs  Simplifier.hs  Tester.hs  Visualizer.hs  mate.tmproj
src/Analysis/: CB.hs
src/MF/: Context.hs  Core.hs  CoreM.hs  Debug.hs  Flowable.hs  Lattice.hs  Mapping.hs  Simplify.hs  Utils.hs
src/MF/Analyses/: AE.hs  LifeVariableAnalysis.hs
src/MF/Languages/Closure/: AG.ag  AG.hs  Inference.hs  Main.def  Main.sdf  Main.tbl  Old.hs  Program.hs  generate
src/MF/Languages/Closure/AG/: Base.ag  Flow.ag
src/MF/Languages/PHP/: AG.ag  AG.hs  Types.hs
src/MF/Languages/PHP/AG/: Base.ag  Checking.ag  Debugging.ag  Flow.ag  PP.ag  Simplify.ag  Typing.ag  Visualizer.ag
src/MF/Languages/While/: AST.hs  Flow.hs  Parser.hs  Util.hs
src/MF/Languages/While/Analyses/: AE.hs  DOS.hs  LV.hs  LifeVariableAnalysis.hs
src/grammar/: PHP5.def  PHP5.tbl  generate
src/grammar/languages/php/common/: Expressions.sdf
tests/: 1.php  10.php  11.php  12.php  13.php  14.php  15.php  2.php  3.php  4.php  5.php  6.php  7.php  8.php  9.php
