Name:               analyses
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Henk-Erik van der Hoek
Synopsis:           Soft Typing 4 PHP
Description:        Soft Typing 4 PHP
Build-Type:         Simple


Executable typing_printer
    Main-Is:          Printer.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , mtl           >= 1.1.0.2
                    , fgl           >= 5.4.2.3
                    , cco           >= 0.0.4
    Hs-Source-Dirs:   src/
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                            
Executable typing_visualizer                                                
    Main-Is:          Visualizer.hs                                         
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                            
Executable typing_debugger                                                  
    Main-Is:          Debugger.hs                                           
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                            
Executable typing_inferencer                                                
    Main-Is:          Inferencer.hs                                         
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                            
Executable typing_tester                                                    
    Main-Is:          Tester.hs                                             
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
                    , directory     >= 1.0.1.1                              
                    , process       >= 1.0.1.3                              
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances
                                                                            
Executable typing_simplifier                                                
    Main-Is:          Simplifier.hs                                         
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances